# Chatbot

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  app.py  flowsettings.py  fly.toml  mkdocs.yml  pyproject.toml  sso_app.py  sso_app_demo.py
.github/workflows/: auto-bump-and-release.yaml  unit-test.yaml
chatbot_app_data/user_data/: sql.db
chatbot_app_data/user_data/vectorstore/: chroma.sqlite3
data/: intent_cleaned_v2.csv  intent_expanded_filled_v2.csv  intent_expanded_filled_v2.xlsx  intent_expanded_template_v2.csv  intent_expanded_template_v2.xlsx
data/models/: intent_classifier.joblib
docs/: about.md  index.md  local_model.md  online_install.md  usage.md
docs/development/: contributing.md  create-a-component.md  utilities.md
docs/pages/app/: customize-flows.md  features.md
docs/scripts/: generate_reference_docs.py
libs/chatbot/: README.md  pyproject.toml
libs/chatbot/chatbot/: cli.py
libs/chatbot/tests/: _test_multimodal_reader.py  simple_pipeline.py  test_agent.py  test_composite.py  test_cot.py  test_docstores.py  test_documents.py  test_embedding_models.py  test_indexing_retrieval.py  test_ingestor.py  test_llms_chat_models.py  test_llms_completion_models.py  test_post_processing.py  test_prompt.py  test_promptui.py  test_reader.py  (+7 more)
libs/chatbot_app/: MANIFEST.in  pyproject.toml
scripts/: predict_intent.py  run_linux.sh  run_macos.sh  run_windows.bat  train_intent_model.py  update_linux.sh  update_macos.sh  update_windows.bat
scripts/migrate/: migrate_chroma_db.py
templates/project-default/: cookiecutter.json
(+156 files in other folders)
